Stop property list wrapping

--- a/src/frontend/views/KeyframeEditor/KeyframeEditor.styl
+++ b/src/frontend/views/KeyframeEditor/KeyframeEditor.styl
@@ -22,6 +22,9 @@
     padding 0 4px
     line-height 24px
 
+    &.propItem--active
+        background-color rgba(#fff, .2)
+
 .propItemName
     flex 1
 
